# Penfold

./: package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: email.rs  main.rs
src/components/ui/: button.tsx
src/lib/: database.ts  utils.ts
src/styles/: globals.css
